New project page added

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,2 +1,8 @@
-
-  <h1>{{pageTitle}}<h1>
+    <head>
+      <meta charset='utf-8'>
+      <title>Help page </title>
+    </head>
+      <h1>{{pageTitle}}<h1>
+          <a href='/get'> About</a>
+          <a href='/'> Home</a>
+          <a href='/project'> Project</a>
