--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset='utf-8'>
-  <title>Help page </title>
-</head>
+{{> header}}
 <body>
   <h1>{{pageTitle}}<h1>
   <p>Soe text here</p>
 </body>
-dwdwdwdddd
-
-ddwdwdwd
 {{> footer}}
 </html>
